reglage de projet et de compétence
Signed-off-by: ArabMohammed <bukhara2002@gmail.com>