@@ -4,6 +4,7 @@ plugins {
     id 'org.openjfx.javafxplugin' version '0.0.10'
     id 'org.javamodularity.moduleplugin' version "1.5.0"
     id 'org.beryx.runtime' version '1.12.7'
+    id 'edu.sc.seis.launch4j' version '2.5.3'
 }
 
 repositories {
@@ -72,34 +73,85 @@ dependencies {
 }
 
 /*************************************************************/
+launch4j {
+    outfile = 'Portfolio.exe'
+    mainClassName = 'Mainapplication.Test4'
+   // icon = "${projectDir}/icons/Ecareer2.ico"
+    productName = 'My App'
+    headerType="gui"
+    /*********/
+    jreMinVersion = '16'
+    jdkPreference = 'preferJre'
+    /*********/
+    libraryDir = 'libs'
+    initialHeapSize = 256
+    maxHeapSize = 256
+    stayAlive = false
+    bundledJre64Bit = true
+    dontWrapJar = true
+    bundledJrePath = 'jre'
+    version ='1.0.0'
+    language ="FRANCE_FR"
+
+   // jvmOptions = ["-Dfile.encoding=UTF8", "-Xmx256m", "-Xms256m"]
+    // jar = '../libs/Master_Mode_System_Config-all-1.0-SNAPSHOT.jar'
+}
+/*
+launch4j {
+    mainClassName = 'pcgen.system.Main'
+    icon = "${projectDir}/installers/win-installer/Local/pcgen.ico"
+    outfile = "pcgen.exe"
+    jreMinVersion = '1.8.0'
+    jreMaxVersion = '1.8.9'
+    jdkPreference = 'preferJre'
+    initialHeapSize = 128
+    maxHeapSize = 512
+    stayAlive = false
+    bundledJre64Bit = true
+    dontWrapJar = true
+    bundledJrePath = 'jre'
+}
+/***************************generation d'executable**********************************/
 ext {
     cloneDir = "$buildDir/clone"
     imageDirPath = "$buildDir/GenererExecutable"
     imageZipPath = "$buildDir/image-zip/pacman.zip"
 }
-/***************************generation d'executable**********************************/
-runtime{
-    tasks.jar.enabled = true
-    javaHome='D:\\Program Files\\AdoptOpenJDK\\jdk-16'
-    imageDir = file(imageDirPath)
-    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
-  //  modules = ['java.desktop', 'java.xml', 'jdk.unsupported', 'java.scripting']
-    /***************************************/
+/*******************************
+runtime {
+        imageDir = file(imageDirPath)
+        imageZip = file(imageZipPath)
+        options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
+        modules = ['java.desktop', 'java.xml', 'jdk.unsupported', 'java.scripting']
+        jpackage {
+            // jpackageHome = '/usr/lib/jvm/jdk14'
+            if(org.gradle.internal.os.OperatingSystem.current().windows) {
+                installerType = 'msi'
+                imageOptions = ['--win-console']
+                installerOptions = ['--win-per-user-install', '--win-dir-chooser', '--win-menu', '--win-shortcut']
+            }
+        }
+    /***************************************
+    launcher {
+        jvmArgs = ["--add-modules=javafx.base,javafx.controls,javafx.fxml"]
+    }
+    /***************************************
     jpackage {
         if(org.gradle.internal.os.OperatingSystem.current().windows) {
             installerType = 'msi'
-             imageOptions = ['--win-console','--app-image']
+             imageOptions = ['--win-console']
             installerOptions = ['--win-per-user-install', '--win-dir-chooser', '--win-menu', '--win-shortcut']
         }
     }
 }
+/**
 tasks.runtime.doLast {
     copy {
         from('src/main/resources')
         into("$buildDir/image/bin")
     }
 }
- /****************************************************************/
+/****************************************************************/
 test {
     useJUnitPlatform()
 }
